
[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "dv-flow-libhdlsim"
version = "0.0.5"
dependencies = [
    "dv-flow-mgr",
    "toposort",
]
authors = [
    {name = "Matthew Ballance", email = "matt.ballance@gmail.com"},
]
description = "Provides dv-flow tasks for performing common tasks related to HDL simulation"
license = {file = "LICENSE" }

[project.entry-points."dv_flow.mgr"]
libhdlsim = "dv_flow.libhdlsim.__ext__"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"dv_flow.libhdlsim" = ["**/flow.dv", "share/uvm_src.tar.bz2"]

[tool.setuptools.cmdclass]
build_py = "build_uvm_src.BuildPy"
sdist = "build_uvm_src.Sdist"
